@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-00
+2011-10-04 Andy Salnikov
+- CsPadFilter module now has parameters that can be used in place
+  of reading calibration files
+
 Tag: V00-00-02
 2011-10-04 Andy Salnikov
 - adding modules for cspad calibration and filtering
